stylesheet.css
html, body{
    margin: 0;
    padding: 0;
    background-color: black;
    height: 100%;
    
}

body{
    position: relative;
}

.bkg-holder{
    background-size: cover;
    background-position: center;
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    opacity: 0;
    transition-duration: 1s;
}

.bkg-current{
    opacity: 1;
}

#main-div{
/*    background-color: black;*/
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
}

.button-row{
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    margin-top: 5%;
}

.chart-holder{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    flex-grow: 1;
    margin: 10% 20% 10% 20%;
}

.chart{
    background-color: rgba(255,255,255,.75);
    padding: 10px;
}

.boss-button{
/*    strip button format*/
    background: none;
	color: inherit;
	border: none;
	padding: 0;
	font: inherit;
	cursor: pointer;
	outline: inherit;
    
    width:40px;
    height: 40px;
    color: white;
    background-color: black;
    background-size: contain;
    margin:10px;
    
    box-shadow: -0px 0px 0px black;
}

.button-wrapper{
    margin: 4px;
    
    
    box-shadow: -0px 0px 0px black;
    
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f1da36+0,fefcea+100&1+0,1+50,0+51 */
background: -moz-linear-gradient(45deg, rgba(241,218,54,1) 0%, rgba(248,235,144,1) 50%, rgba(248,235,146,0) 51%, rgba(254,252,234,0) 100%); /* FF3.6-15 */
background: -webkit-linear-gradient(45deg, rgba(241,218,54,1) 0%,rgba(248,235,144,1) 50%,rgba(248,235,146,0) 51%,rgba(254,252,234,0) 100%); /* Chrome10-25,Safari5.1-6 */
background: linear-gradient(45deg, rgba(241,218,54,1) 0%,rgba(248,235,144,1) 50%,rgba(248,235,146,0) 51%,rgba(254,252,234,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1da36', endColorstr='#00fefcea',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
}

.button-wrapper:hover{
    box-shadow: -2px 2px 2px black;
    transform: translateX(2px) translateY(-2px);
}

.button-wrapper:hover .boss-button{
    box-shadow: -2px 2px 2px black;
    transform: translateX(2px) translateY(-2px);
}

#vale-guardian{
    background-image: url(vale-guardian-icon.png);
}

#gorseval{
    background-image: url(gorseval-icon.png);
}

#sabetha{
    background-image: url(sabetha-icon.png);
}

#slothasor{
    background-image: url(slothasor-icon.png);
}

#matthias{
    background-image: url(matthias-icon.png);
}

#keep-construct{
    background-image: url(keep-construct-icon.png);
}

#xera{
    background-image: url(xera-icon.png);
}

#cairn{
    background-image: url(cairn-icon.png);
}

#mursaat-overseer{
    background-image: url(mursaat-overseer-icon.png);
}

#samarog{
    background-image: url(samarog-icon.png);
}

#deimos{
    background-image: url(deimos-icon.png);
}

#soulless-horror{
    background-image: url(soulless-horror-icon.png);
}

#dhuum{
    background-image: url(dhuum-icon.png);
}

#amalgamate{
    background-image: url(amalgamate-icon.png);
}

#largos-twins{
    background-image: url(largos-twins-icon.png);
}

#qadim{
    background-image: url(qadim-icon.png);
}

